--- a/aob03/netlify.toml
+++ b/aob03/netlify.toml
@@ -1,8 +1,8 @@
 [build]
   publish = "aob03/public"
 #  command = "cd aob03 && hugo --gc --themesDir ../.."
-  command = "cd aob03 && hugo"
-
+#  command = "cd aob03 && hugo"
+  command = "hugo"
 
 [build.environment]
   HUGO_VERSION = "0.73.0"
