--- a/aob03/netlify.toml
+++ b/aob03/netlify.toml
@@ -6,5 +6,5 @@
 
 [build.environment]
   HUGO_VERSION = "0.73.0"
-  HUGO_THEME = "repo"
-  HUGO_BASEURL = "/"
+#  HUGO_THEME = "repo"
+#  HUGO_BASEURL = "/"
